--- a/css/style.css
+++ b/css/style.css
@@ -1176,7 +1176,26 @@ body {
     display: block;
     background-color: #edf9f9;
 }
+.section-bt-1 {
+    position: relative;
+    display: block;
+    width: 114px;
 
+    text-align: center;
+    font-size: 13px;
+    color: #666;
+    line-height: 32px;
+    background-color: #fff;
+    border: 1px solid #bbb;
+
+    margin-top: 25px;
+
+    transition: background-color 0.5s;
+}
+
+.section-bt-1:hover {
+    background-color: #f8f8f8;
+}
 .sale .container {
     padding: 80px 0;
     overflow: hidden;
@@ -1474,7 +1493,7 @@ body {
     bottom: -2px;
 
     display: block;
-    width: 100%;
+    width: 90%;
     height: 2px;
     background-color: #76bd42;
 }
@@ -1751,10 +1770,29 @@ body {
     float: left;
 }
 
-.brand-left .section-bt {
+.brand-left .section-bt-1 {
     color: #000;
 }
+.section-bt-2 {
+    position: relative;
+    display: block;
+    width: 114px;
 
+    text-align: center;
+    font-size: 13px;
+    color: #666;
+    line-height: 32px;
+    background-color: #fff;
+    border: 1px solid #bbb;
+
+    margin-top: 25px;
+
+    transition: background-color 0.5s;
+}
+
+.section-bt-2:hover {
+    background-color: #f8f8f8;
+}
 
 .sw-brand-control {
     position: absolute;
